<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidTutorials</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="test_button">Test Button</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="list_view_tutorial">List View Tutorial</string>
    <string name="layout_tutorial">Layout Tutorial</string>
    <string name="title_activity_layout_tutorial">LayoutTutorialActivity</string>
    <string name="title_activity_layout_tutorial2">LayoutTutorial2Activity</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="title_activity_video_tutorial">VideoTutorialActivity</string>
    <string name="title_activity_async_task_tutorial">AsyncTaskTutorialActivity</string>
    <string name="async_task_tutorial">Async Task Tutorial</string>
    <string name="transition_tutorial">Transition Tutorial</string>
    <string name="title_activity_transition_tutorial">TransitionTutorialActivity</string>
    <string name="title_activity_seek_bar_tutorial">SeekBarTutorialActivity</string>
    <string name="seek_bar_tutorial">SeekBar Tutorial</string>

</resources>
