<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alexander.androidtutorials.MainActivity"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/textViewTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_color"
                android:text="@string/list_view_tutorial"
                android:textColor="#FFFFFF" />

            <!-- <WebView -->
            <!-- android:id="@+id/webView1" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="match_parent" -->
            <!-- android:layout_alignParentBottom="true" -->
            <!-- android:layout_alignParentLeft="true" -->
            <!-- android:layout_below="@id/btnText" /> -->

            <Button
                android:id="@+id/btnVideoTutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textViewTest"
                android:background="@color/blue_color"
                android:text="@string/video_tutorial"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnLayoutTutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnVideoTutorial"
                android:background="@color/orange_color"
                android:text="@string/layout_tutorial"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnAsyncTaskTutorial"
                style="@style/customButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/btnLayoutTutorial"
                android:text="@string/async_task_tutorial" />

            <Button
                android:id="@+id/btnTransitionTutorial"
                style="@style/customButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnAsyncTaskTutorial"
                android:text="@string/transition_tutorial" />

            <Button
                android:id="@+id/btnSeekBarTutorial"
                style="@style/customButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnTransitionTutorial"
                android:text="@string/seek_bar_tutorial" />
        </RelativeLayout>
    </ScrollView>

</FrameLayout>